# wiki-tui

./: '  .all-contributorsrc  .autorc  .env  .gitignore  3  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  config.ini  database.db  dev  index.html  mkdocs-serve.sh  mkdocs.yml  shell.nix  sitemap.xml  test-page.html  test_search.rs  todo.md  versions.json  wiki-tui.desktop  wiki-tui.uxf
.devcontainer/: devcontainer.json
.github/: deadpendency.yaml  release.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  changelog.yml  ci.yml  format.yml  publish.yml  rust.yml  test.yml
0.6/: 404.html  index.html  sitemap.xml
0.6/configuration/: index.html
0.6/configuration/api/: index.html
0.6/configuration/features/: index.html
0.6/contributing/: index.html
0.7/: 404.html  index.html  sitemap.xml
0.7/changelog/: index.html
0.7/configuration/: index.html
0.7/contributing/: index.html
0.8/: 404.html  index.html  sitemap.xml
0.8-dev/: 404.html  index.html  sitemap.xml
0.8-dev/changelog/: index.html
0.8-dev/configuration/: index.html
0.8-dev/contributing/: index.html
0.8.0-dev/: 404.html  index.html  sitemap.xml
0.8.0-dev/changelog/: index.html
0.8.0-dev/configuration/: index.html
0.8.0-dev/contributing/: index.html
0.8.1/: 404.html  index.html  sitemap.xml
0.8.1 (latest)/: 404.html  index.html  sitemap.xml
0.8.1 (latest)/changelog/: index.html
0.8.1 (latest)/configuration/: index.html
0.8.1 (latest)/contributing/: index.html
0.8.1-pre/: 404.html  index.html  sitemap.xml
0.8.1-pre/changelog/: index.html
0.8.1-pre/configuration/: index.html
0.8.1-pre/contributing/: index.html
0.8.1/changelog/: index.html
0.8.1/configuration/: index.html
0.8.1/contributing/: index.html
0.8.2/: 404.html  index.html  sitemap.xml
0.8.2/changelog/: index.html
0.8.2/configuration/: index.html
0.8.2/contributing/: index.html
0.8/changelog/: index.html
0.8/configuration/: index.html
0.8/contributing/: index.html
0.9/: 404.html  index.html  sitemap.xml
0.9.2/: 404.html  index.html  sitemap.xml
0.9.2-pre/: 404.html  index.html  sitemap.xml
0.9.2-pre/changelog/: index.html
0.9.2-pre/configuration/: index.html
0.9.2-pre/contributing/: index.html
0.9.2-pre/search/: search_index.json
0.9.2/changelog/: index.html
0.9.2/configuration/: index.html
0.9.2/contributing/: index.html
0.9.2/search/: search_index.json
0.9/changelog/: index.html
0.9/configuration/: index.html
0.9/contributing/: index.html
0.9/search/: search_index.json
book/: README  book.toml  index.html
book/src/: SUMMARY.md
configuration/: index.html
configuration/api/: index.html
configuration/features/: index.html
configuration/keybindings/: index.html
configuration/logging/: index.html
configuration/theme/: index.html
configuration/toc/: index.html
contributing/: index.html
contributing/maintainers/: index.html
data/: languages.json
dev/: 404.html  index.html  sitemap.xml
dev-0.8.0/: 404.html  index.html  sitemap.xml
dev-0.8.0/changelog/: index.html
dev-0.8.0/configuration/: index.html
dev-0.8.0/contributing/: index.html
dev/changelog/: index.html
dev/configuration/: index.html
dev/contributing/: index.html
develop/: 404.html  index.html  sitemap.xml
develop/changelog/: index.html
develop/configuration/: index.html
develop/contributing/: index.html
develop/search/: search_index.json
docs/: README.md  index.md  mkdocs.yml
docs/.overrides/: main.html
docs/changelog/: index.md  upgrade.md
docs/configuration/: api.md  features.md  index.md  keybindings.md  logging.md  overview.md  theme.md  toc.md
docs/contributing/: bug-report.md  develop-code.md  developing.md  feature-request.md  index.md  maintainers.md  overview.md
docs/docs/: index.md
docs/getting-started/: crash.md  first-startup.md  installation.md  license.md  overview-keybindings.md  usage.md  using-cli.md
getting-started/crash/: index.html
getting-started/installation/: index.html
getting-started/license/: index.html
getting-started/usage/: index.html
latest/: 404.html  index.html
latest/changelog/: index.html
latest/configuration/: index.html
latest/contributing/: index.html
migrations/2021-01-22-212531_create_article_index/: down.sql  up.sql
migrations/2021-01-24-144520_create_article/: down.sql  up.sql
overrides/: main.html
pre-0.8.0/: 404.html  index.html  sitemap.xml
pre-0.8.0/changelog/: index.html
pre-0.8.0/configuration/: index.html
pre-0.8.0/contributing/: index.html
src/: .config.rs.swp  .main.rs.swp  .wiki.rs.swn  .wiki.rs.swo  .wiki.rs.swp  action.rs  app.rs  backend.rs  cli.rs  config.rs  error.rs  event.rs  home.rs  key_macros.rs  lib.rs  logging.rs  main.rs  page_loader.rs  panic_handler.rs  structs.rs  terminal.rs  tests.rs  traits.rs  tui.rs  wiki.rs
src/components/: help.rs  help_popup.rs  home.rs  logger.rs  message_popup.rs  mod.rs  page.rs  page_language_popup.rs  page_viewer.rs  root.rs  search.rs  search_bar.rs  search_language_popup.rs  status.rs
src/db/: api.rs  mod.rs  schema.rs  wiki.rs
src/renderer/: default_renderer.rs  mod.rs  test_renderer.rs
src/tui/: mod.rs
src/ui/: article.rs  centered_rect.rs  language_selector.rs  mod.rs  models.rs  padded_rect.rs  panel.rs  root.rs  scroll.rs  scroll_view.rs  search.rs  select_view.rs  stateful_list.rs  status_bar.rs  theme_view.rs  toc.rs  utils.rs
src/wiki/: article.rs  article_new.rs  language.rs  mod.rs  parser.rs  search.rs  section.rs
test_search/: Cargo.toml
test_search/src/: main.rs
wiki-api/: Cargo.toml
wiki-api-macros/: Cargo.toml  README.md
wiki-api-macros/src/: lib.rs
wiki-api/src/: document.rs  languages.rs  lib.rs  page.rs  parser.rs  proxy.rs  search.rs  wiki_client.rs
wiki-tui/: Cargo.toml
wiki-tui/src/: action.rs  app.rs  event.rs  lib.rs  logging.rs  main.rs  panic_handler.rs  terminal.rs
wiki-tui/src/components/: logger.rs  mod.rs  root.rs  search.rs
(+304 files in other folders)
