[package]
name = "wiki-tui"
version = "0.6.0"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/Builditluc/wiki-tui"
description = "A simple and easy to use Wikipedia Text User Interface"
license = "MIT"
readme = "README.md"

include = [
  "Cargo.*",
  "logo.png",
  "LICENSE.txt",
  "src/",
  "docs/assets/images/preview*",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
blt-backend = ["cursive/blt-backend"]

[dependencies]
syn = "=1.0.57"
serde_json = "1.0.61"
log = "0.4.13"
dirs = "3.0.1"
anyhow = "1.0"
select = "0.5.0"
log4rs = "1.0.0"
lazy_static = "1.4.0"
panic-message = "0.3.0"
backtrace = "0.3"
toml = "0.5.9"
structopt = "0.3.25"
chrono = "0.4"

[dependencies.cursive]
version = "0.20"
default-features = false

[dependencies.cursive_buffered_backend]
# git = "https://github.com/gyscos/cursive_buffered_backend"
version = "0.6.0"

[dependencies.cursive-aligned-view]
version = "0.6.0"

[dependencies.reqwest]
version = "0.11"
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
