[workspace]
members = ["wiki-api", "wiki-api-macros"]

[package]
name = "wiki-tui"
version = "0.9.0-pre"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
description = "A simple and easy to use Wikipedia Text User Interface"
readme = "README.md"
homepage = "https://builditluc.github.io/wiki-tui"
repository = "https://github.com/builditluc/wiki-tui"
license = "MIT"
keywords = ["tui", "wikipedia"]

[dependencies]
anyhow = "1.0.75"
better-panic = "0.3.0"
crossterm = { version = "0.27.0", default-features = false, features = ["event-stream"] }
futures = "0.3.28"
libc = "0.2.147"
log = "0.4.20"
ratatui = "0.24.0"
signal-hook = "0.3.17"
textwrap = { version = "0.16.0", features = ["smawk"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tui-input = "0.8.0"

#tui-logger = { version = "0.9.6", default-features = false, features = ["ratatui-support", "tracing-support"] }
# Until tui-logger releases a new version with ratatui v0.24, we have to use the git repository
tui-logger = { git = "https://github.com/gin66/tui-logger/", rev = "b9460de320b25a9862d54d151519487f414579d3", default-features = false, features = [ "tracing-support" ]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wiki-api]
path = "wiki-api"
version = "0.1.0"
