[workspace]
members = ["wiki-api", "wiki-api-macros"]

[package]
name = "wiki-tui"
version = "0.9.1"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
rust-version = "1.76.0"
description = "A simple and easy to use Wikipedia Text User Interface"
readme = "README.md"
homepage = "https://wiki-tui.net"
repository = "https://github.com/builditluc/wiki-tui"
license = "MIT"
keywords = ["tui", "wikipedia"]

[dependencies]
anyhow = "1.0.75"
better-panic = "0.3.0"
clap = { version = "4.4.11", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", default-features = false, features = ["event-stream", "serde"] }
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.2"
libc = "0.2.147"
log = { version = "0.4.20", features = ["serde"] }
ratatui = { version = "0.26.3", features = ["serde"] }
signal-hook = "0.3.17"
serde = "1.0"
textwrap = { version = "0.16.0", features = ["smawk"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
toml = "0.8.19"
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tui-input = "0.9"
tui-logger = { version = "0.11.1", default-features = false, features = ["crossterm", "tracing-support"] }
bitflags = { version = "2.8.0", features = ["serde"] }

[dependencies.wiki-api]
path = "wiki-api"
version = "0.1.1"
