[package]
name = "wiki-api-macros"
version = "0.1.1"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
description = "Proc-macros for use within wiki-api"
documentation = "https://docs.rs/wiki-api-macros"
readme = "README.md"
homepage = "https://builditluc.github.io/wiki-tui"
repository = "https://github.com/builditluc/wiki-tui"
license = "MIT"
keywords = ["tui", "wikipedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
syn = "2.0.30"
