[package]
name = "wiki-api"
version = "0.1.0"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
description = "Backend for wiki-tui"
documentation = "https://docs.rs/wiki-api"
readme = "README.md"
homepage = "https://builditluc.github.io/wiki-tui"
repository = "https://github.com/builditluc/wiki-tui"
license = "MIT"
keywords = ["tui", "wikipedia"]

[dependencies]
anyhow = "1.0.75"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.105"
serde_repr = "0.1.16"
url = "2.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wiki-api-macros]
path = "../wiki-api-macros"
version = "0.1.0"
