[package]
name = "wiki-api"
version = "0.1.0"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
description = "Backend for wiki-tui"
documentation = "https://docs.rs/wiki-api"
homepage = "https://wiki-tui.net"
repository = "https://github.com/builditluc/wiki-tui"
license = "MIT"
keywords = ["tui", "wikipedia"]

[dependencies]
anyhow = "1.0.75"
bitflags = { version = "2.6.0", features = ["serde"] } 
ego-tree = "0.6.2"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
reqwest = "0.11.20"
scraper = "0.17.1"
serde = "1.0.188"
serde_json = "1.0.105"
serde_repr = "0.1.16"
snafu = "0.8.3"
tracing = "0.1.37"
url = { version = "2.4.1", features = ["serde"] }
urlencoding = "2.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wiki-api-macros]
path = "../wiki-api-macros"
version = "0.1.0"
