[package]
name = "wiki-tui"
version = "0.8.2"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"
description = "A simple and easy to use Wikipedia Text User Interface"
readme = "README.md"
homepage = "https://builditluc.github.io/wiki-tui"
repository = "https://github.com/builditluc/wiki-tui"
license = "MIT"
keywords = ["tui", "wikipedia"]

[dependencies]
anyhow = "1.0.75"
better-panic = "0.3.0"
crossterm = { version = "0.27.0", default-features = false, features = ["event-stream"] }
futures = "0.3.28"
libc = "0.2.147"
ratatui = "0.23.0"
signal-hook = "0.3.17"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tracing = "0.1.37"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wiki-api]
path = "../wiki-api"
version = "0.1.0"
